--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
   "dependencies": {
-    "jest": "^27.4.7"
+    "jest": "^27.4.7",
+    "jest-each": "^27.4.6"
   },
   "name": "macosx",
   "version": "1.0.0",
   "main": "main.js",
-  "devDependencies": {},
-  "type":"module",
+  "type": "module",
   "scripts": {
     "test": "node --experimental-vm-modules node_modules/jest/bin/jest.js"
   },
